Actualizar evento de tenis: corregir nombres y fechas en la agenda

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,10 +1,10 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">US OPEN - TENIS</h3>
+  <h3 class="evento-text">US OPEN - TENIS - FINAL</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>Alcaraz vs. Djokovic</strong
+    <strong>Alcaraz vs. Sinner</strong
     >
-    &nbsp;<i class="bi bi-arrow-right"></i> 05/09 · 21:00h
+    &nbsp;<i class="bi bi-arrow-right"></i> 07/09 · 20:00h
   </span>
   <span style="font-weight: bold;">
     Movistar Plus+ // M+ Deportes 2
