Eliminar componente de agenda de eventos de la vista

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -269,9 +269,9 @@
     </div>
   </div>
 
-  <div>
+<!-- <div>
     <app-agenda-evento-text></app-agenda-evento-text>
-  </div>
+  </div> -->
 
   <h4 class="text-enlaces-agenda-completa">
     Para ver la agenda completa, visita la web de&nbsp;
