Añadir texto de carga a los contenedores de iframe en la agenda deportiva

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -190,6 +190,7 @@
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[0]">
         <mat-spinner class="light-blue-spinner" diameter="78"></mat-spinner>
+        <span class="loading-text">Cargando...</span>
       </div>
       <iframe
         id="ftv_iframe_0"
@@ -206,6 +207,7 @@
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[1]">
         <mat-spinner class="light-blue-spinner" diameter="78"></mat-spinner>
+        <span class="loading-text">Cargando...</span>
       </div>
       <iframe
         id="ftv_iframe_1"
@@ -222,6 +224,7 @@
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[2]">
         <mat-spinner class="light-blue-spinner" diameter="78"></mat-spinner>
+        <span class="loading-text">Cargando...</span>
       </div>
       <iframe
         id="ftv_iframe_2"
@@ -238,6 +241,7 @@
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[3]">
         <mat-spinner class="light-blue-spinner" diameter="78"></mat-spinner>
+        <span class="loading-text">Cargando...</span>
       </div>
       <iframe
         id="ftv_iframe_3"
@@ -254,6 +258,7 @@
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[4]">
         <mat-spinner class="light-blue-spinner" diameter="78"></mat-spinner>
+        <span class="loading-text">Cargando...</span>
       </div>
       <iframe
         id="ftv_iframe"
