--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,12 +1,23 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">US OPEN - TENIS - FINAL</h3>
+  <h3 class="evento-text">CHAMPIONS LEAGUE - 1ª JORNADA</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>Alcaraz vs. Sinner</strong
+    <strong>Athletic vs. Arsenal</strong
     >
-    &nbsp;<i class="bi bi-arrow-right"></i> 07/09 · 20:00h
+    &nbsp;<i class="bi bi-arrow-right"></i> 15/09 · 18:45h
   </span>
   <span style="font-weight: bold;">
-    Movistar Plus+ // M+ Deportes 2
+   <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 2
+  </span><br>
+  <span class="agenda-text">
+    <strong>MultiChampions</strong
+    >
+    &nbsp;<i class="bi bi-arrow-right"></i> 15/09 · 21:00h
+  </span>
+  <span style="font-weight: bold;">
+   <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 4
+  </span><br>
+  <span style="font-style: italic;">
+   Resto de partidos consultar en Agenda Deportiva
   </span>
 </div>
