Actualizar la agenda de eventos de la Liga de Campeones, modificando partidos y horarios

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -2,22 +2,13 @@
   <h3 class="evento-text">CHAMPIONS LEAGUE - 1ª JORNADA</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>Athletic vs. Arsenal</strong
-    >
-    &nbsp;<i class="bi bi-arrow-right"></i> 16/09 · 18:45h
+    <strong>MultiChampions</strong>
+    &nbsp;<i class="bi bi-arrow-right"></i> 17/09 · 21:00h
   </span>
-  <span style="font-weight: bold;">
-   <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 2
-  </span><br>
-  <span class="agenda-text">
-    <strong>MultiChampions</strong
-    >
-    &nbsp;<i class="bi bi-arrow-right"></i> 16/09 · 21:00h
-  </span>
-  <span style="font-weight: bold;">
-   <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 4
-  </span><br>
-  <span style="font-style: italic;">
-   Resto de partidos consultar en Agenda Deportiva
+  <span style="font-weight: bold">
+    <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 4 </span
+  ><br />
+  <span style="font-style: italic">
+    Resto de partidos consultar en Agenda Deportiva
   </span>
 </div>
