Actualizar enlaces de descarga y aplicaciones para Ace Stream en Android TV

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -471,7 +471,7 @@
       Si tienes una TV o un dispositivo con Android TV, puedes instalar Ace
       Stream Engine haciendo clic
       <a
-        href="https://mega.nz/file/gBkWiZQZ#wkxCu7wI02_adD6qBLYKDsMdtJQg_JobMCJkEv3J2_M"
+        href="https://download.acestream.media/products/android-tv/acestream-core/armv7/latest"
         target="_blank"
         >aquí</a
       >
@@ -479,16 +479,20 @@
       Files to TV" (<a
         href="https://play.google.com/store/apps/details?id=com.yablio.sendfilestotv"
         target="_blank"
-        >enlace</a
-      >) para enviar el archivo APK a tu TV e instalarlo desde allí utilizando
+        >enlace para Android</a
+      >, en iOS en App Store) para enviar el archivo APK a tu TV e instalarlo desde allí utilizando
       un gestor de archivos como ES File Explorer (disponible en Play Store en
       tu Android TV). Una vez instalado, abre Ace Stream Engine y en la parte
       superior derecha, haz clic en los tres puntitos y selecciona "Ajustes".
-      Allí, vete a ajustes del servidor, y en Jugador seleccionado pon Ace
+      Allí, vete a ajustes del servidor, y en "Jugador seleccionado" pon Ace
       Player.<br /><br />
       Para reproducir los enlaces, desde tu dispositivo móvil, accede a la web
       de Markel Links, copia el enlace que quieras reproducir y, utilizando la
-      app "Control remoto para Android TV", pega el enlace en tu TV. Este enlace
+      app Control remoto para Android TV (<a
+        href="https://play.google.com/store/apps/details?id=tech.simha.androidtvremote"
+        target="_blank"
+        >enlace para Android</a
+      >, en iOS en App Store), pega el enlace en tu TV. Este enlace
       lo debes pegar en el cuadro que te sale al hacer clic en los tres puntitos
       de la parte superior derecha de Ace Stream en tu TV y seleccionando
       "Introducir la ID de contenido". <br />
