Actualizar la agenda de eventos para la Liga de Campeones, reemplazando la Gala del Balón de Oro y ajustando los horarios y enlaces de transmisión.

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,18 +1,22 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">GALA BALÓN DE ORO</h3>
+  <h3 class="evento-text">CHAMPIONS LEAGUE - 2ª JORNADA</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>Alfombra Roja</strong>
-    &nbsp;<i class="bi bi-arrow-right"></i> 22/09 · 19:30h
-  </span>
-  <span class="agenda-text">
-    <strong>Gala</strong>
-    &nbsp;<i class="bi bi-arrow-right"></i> 22/09 · 21:00h
+    <strong>MultiChampions</strong>
+    &nbsp;<i class="bi bi-arrow-right"></i> 30/09 · 21:00h || 01/10 · 21:00h
   </span>
   <span style="font-weight: bold">
-    <i class="bi bi-tv"></i>&nbsp; Movistar Plus+ </span
-  >
-<!--   <span style="font-style: italic">
+    <i class="bi bi-tv"></i>&nbsp; M. Liga de Campeones 4
+  </span>
+  <span class="agenda-text">
+    <strong>B. Dortmund vs. Athletic</strong>
+    &nbsp;<i class="bi bi-arrow-right"></i> 01/10 · 21:00h
+  </span>
+  <span style="font-weight: bold">
+    <i class="bi bi-tv"></i>&nbsp; M. Liga de Campeones 2
+  </span>
+  <br />
+  <span style="font-style: italic">
     Resto de partidos consultar en Agenda Deportiva
-  </span> -->
+  </span>
 </div>
