--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -273,10 +273,10 @@
       ></iframe>
     </div>
   </div>
-  
-<!-- <div>
+
+  <div>
     <app-agenda-evento-text></app-agenda-evento-text>
-  </div> -->
+  </div>
 
   <h4 class="text-enlaces-agenda-completa">
     Para ver la agenda completa, visita la web de&nbsp;
@@ -480,22 +480,22 @@
         href="https://play.google.com/store/apps/details?id=com.yablio.sendfilestotv"
         target="_blank"
         >enlace para Android</a
-      >, en iOS en App Store) para enviar el archivo APK a tu TV e instalarlo desde allí utilizando
-      un gestor de archivos como ES File Explorer (disponible en Play Store en
-      tu Android TV). Una vez instalado, abre Ace Stream Engine y en la parte
-      superior derecha, haz clic en los tres puntitos y selecciona "Ajustes".
-      Allí, vete a ajustes del servidor, y en "Jugador seleccionado" pon Ace
-      Player.<br /><br />
+      >, en iOS en App Store) para enviar el archivo APK a tu TV e instalarlo
+      desde allí utilizando un gestor de archivos como ES File Explorer
+      (disponible en Play Store en tu Android TV). Una vez instalado, abre Ace
+      Stream Engine y en la parte superior derecha, haz clic en los tres
+      puntitos y selecciona "Ajustes". Allí, vete a ajustes del servidor, y en
+      "Jugador seleccionado" pon Ace Player.<br /><br />
       Para reproducir los enlaces, desde tu dispositivo móvil, accede a la web
       de Markel Links, copia el enlace que quieras reproducir y, utilizando la
       app Control remoto para Android TV (<a
         href="https://play.google.com/store/apps/details?id=tech.simha.androidtvremote"
         target="_blank"
         >enlace para Android</a
-      >, en iOS en App Store), pega el enlace en tu TV. Este enlace
-      lo debes pegar en el cuadro que te sale al hacer clic en los tres puntitos
-      de la parte superior derecha de Ace Stream en tu TV y seleccionando
-      "Introducir la ID de contenido". <br />
+      >, en iOS en App Store), pega el enlace en tu TV. Este enlace lo debes
+      pegar en el cuadro que te sale al hacer clic en los tres puntitos de la
+      parte superior derecha de Ace Stream en tu TV y seleccionando "Introducir
+      la ID de contenido". <br />
       <a
         href="https://mega.nz/folder/AddSwK6J#E5L5EeZqvazk2eJLbtFzZg"
         target="_blank"
