--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -389,15 +389,15 @@
         >
       </a>
       <a
-        href="https://www.rbtvplus05.com/es/"
+        href="https://www.fctv33.com/es"
         target="_blank"
         class="otra-web-link"
         style="text-decoration: none"
       >
         <img
-          src="https://statics2.mfctai51.xyz/img/rb/web-logo-rbplus.png"
-          alt="RBTV+"
-          title="RBTV+"
+          src="https://statics1.tcgfs39a2.xyz/img/fc/web_logo_fc.svg"
+          alt="FCTV33"
+          title="FCTV33"
           width="180"
           height="auto"
           style="
