Actualizar enlace de descarga de Ace Stream para Android TV

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -503,7 +503,7 @@
       Si tienes una TV o un dispositivo con Android TV, puedes instalar Ace
       Stream Engine haciendo clic
       <a
-        href="https://download.acestream.media/products/android-tv/acestream-core/armv7/latest"
+        href="https://dl.modfyp.mobi/uploads/2024/2/Acestream-3.1.80-Modfyp.com.apk"
         target="_blank"
         >aquí</a
       >
