Actualizar el tamaño de fuente y agregar mensaje sobre la actualización automática de enlaces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -290,6 +290,11 @@
   <h3 class="header-enlaces" id="enlaces">ENLACES</h3>
   <div class="mini-separator"></div>
 
+  <p class="last-update">
+    <i class="bi bi-info-circle-fill" style="margin-right: 2px;"></i>
+    Los enlaces se actualizan automáticamente todos los días.
+  </p>
+
   <div class="search-container">
     <form class="search-form">
       <div class="search-field-container">
