--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,19 +1,19 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">CHAMPIONS LEAGUE - 2ª JORNADA</h3>
+  <h3 class="evento-text">CHAMPIONS LEAGUE - 5ª JORNADA</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
     <strong>MultiChampions</strong>
-    &nbsp;<i class="bi bi-arrow-right"></i> 30/09 · 21:00h || 01/10 · 21:00h
+    &nbsp;<i class="bi bi-arrow-right"></i> 25/11 y 26/11 · 21:00h
   </span>
   <span style="font-weight: bold">
     <i class="bi bi-tv"></i>&nbsp; M. Liga de Campeones 4
   </span>
   <span class="agenda-text">
-    <strong>B. Dortmund vs. Athletic</strong>
-    &nbsp;<i class="bi bi-arrow-right"></i> 01/10 · 21:00h
+    <strong>Slavia Praga vs. Athletic</strong>
+    &nbsp;<i class="bi bi-arrow-right"></i> 25/11 · 21:00h
   </span>
   <span style="font-weight: bold">
-    <i class="bi bi-tv"></i>&nbsp; M. Liga de Campeones 2
+    <i class="bi bi-tv"></i>&nbsp; M. Liga de Campeones 3
   </span>
   <br />
   <span style="font-style: italic">
