Actualizar la fecha de los partidos en agenda-evento-text.component.html

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -3,18 +3,18 @@
   <div class="mini-separator"></div>
   <span class="agenda-text">
     <strong>MultiChampions</strong>
-    &nbsp;<i class="bi bi-arrow-right"></i> 25/11 y 26/11 · 21:00h
+    &nbsp;<i class="bi bi-arrow-right"></i> 26/11 · 21:00h
   </span>
   <span style="font-weight: bold">
     <i class="bi bi-tv"></i>&nbsp; M. Liga de Campeones 4
   </span>
-  <span class="agenda-text">
+  <!-- <span class="agenda-text">
     <strong>Slavia Praga vs. Athletic</strong>
     &nbsp;<i class="bi bi-arrow-right"></i> 25/11 · 21:00h
   </span>
   <span style="font-weight: bold">
     <i class="bi bi-tv"></i>&nbsp; M. Liga de Campeones 3
-  </span>
+  </span> -->
   <br />
   <span style="font-style: italic">
     Resto de partidos consultar en Agenda Deportiva
