--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -426,7 +426,7 @@
         >
       </a>
       <a
-        href="https://www.fctv33.com/es"
+        href="https://www.fctv33.work/es"
         target="_blank"
         class="otra-web-link"
         style="text-decoration: none"
