--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -360,6 +360,11 @@
           >({{ groupedLinks[provider].length }})</span
         >
       </h4>
+      
+      <p *ngIf="provider === 'DAZN FÓRMULA 1'" style="color: #ffc107; font-size: 17px; margin: 10px 0; font-weight: 500; text-align: center;">
+        <i class="bi bi-exclamation-triangle-fill" style="margin-right: 5px;"></i>
+        Solo funcionan los enlaces a partir de la Opción 9
+      </p>
      
       <ul class="provider-links">
         <li class="links" *ngFor="let link of groupedLinks[provider]">
