--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,20 +1,20 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">CHAMPIONS LEAGUE - 5ª JORNADA</h3>
+  <h3 class="evento-text">CHAMPIONS LEAGUE - 6ª JORNADA</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>MultiChampions</strong>
-    &nbsp;<i class="bi bi-arrow-right"></i> 26/11 · 21:00h
+    <strong>MultiChampions</strong> |
+    &nbsp;<i class="bi bi-calendar-date"></i> 09/12 y 10/12 &nbsp;<i class="bi bi-clock"></i> 21:00h
   </span>
   <span style="font-weight: bold">
-    <i class="bi bi-tv"></i>&nbsp; M. Liga de Campeones 4
+    <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 4
   </span>
-  <!-- <span class="agenda-text">
-    <strong>Slavia Praga vs. Athletic</strong>
-    &nbsp;<i class="bi bi-arrow-right"></i> 25/11 · 21:00h
+  <span class="agenda-text">
+    <strong>Athletic vs. PSG</strong> |
+    &nbsp;<i class="bi bi-calendar-date"></i> 10/12 &nbsp;<i class="bi bi-clock"></i> 21:00h
   </span>
   <span style="font-weight: bold">
-    <i class="bi bi-tv"></i>&nbsp; M. Liga de Campeones 3
-  </span> -->
+    <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 2
+  </span>
   <br />
   <span style="font-style: italic">
     Resto de partidos consultar en Agenda Deportiva
