--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -706,7 +706,7 @@
   </div>
 
   <div class="footer">
-    <span class="footer-text">&copy; 2025 Markel Links</span>
+    <span class="footer-text">&copy; {{ currentYear }} Markel Links</span>
     <p class="footer-text">
       Todos los enlaces son obtenidos de fuentes externas.
     </p>
