Actualizar instrucciones para reproducir enlaces en Ace Stream y agregar opción de Wiseplay

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -491,7 +491,12 @@
       Stream, puedes abrir el enlace haciendo clic en él directamente, y dándole
       a reproducir en Ace Player. También puedes copiar el enlace, abrir Ace
       Stream manualmente y pegar el enlace en el cuadro de texto de "Introduzca
-      aquí el enlace al contenido".
+      aquí el enlace al contenido". <br><br />
+      Otra opción es usar la app de Wiseplay (disponible en 
+      <a href="https://play.google.com/store/apps/details?id=com.wiseplay" target="_blank">Google Play Store</a>)
+      e introducir esta URL de lista M3U allí: <code>https://bit.ly/4pcej3D</code>.
+      Una vez añadida, verás todos los canales ordenados por temáticas. Tan solo selecciona el canal que
+      quieras ver y se abrirá Ace Stream automáticamente para reproducir el enlace.
     </p>
 
     <h4 style="color: white; margin: 0 20px 20px 29px">Windows (PC)</h4>
@@ -528,16 +533,11 @@
       Stream Engine y en la parte superior derecha, haz clic en los tres
       puntitos y selecciona "Ajustes". Allí, vete a ajustes del servidor, y en
       "Jugador seleccionado" pon Ace Player.<br /><br />
-      Para reproducir los enlaces, desde tu dispositivo móvil, accede a la web
-      de Markel Links, copia el enlace que quieras reproducir y, utilizando la
-      app Control remoto para Android TV (<a
-        href="https://play.google.com/store/apps/details?id=tech.simha.androidtvremote"
-        target="_blank"
-        >enlace para Android</a
-      >, en iOS en App Store), pega el enlace en tu TV. Este enlace lo debes
-      pegar en el cuadro que te sale al hacer clic en los tres puntitos de la
-      parte superior derecha de Ace Stream en tu TV y seleccionando "Introducir
-      la ID de contenido". <br />
+      Para reproducir los enlaces en Android TV, descarga la app de Wiseplay (disponible en Play Store en tu Android TV)
+      e introduce esta URL de lista M3U allí: <code>https://bit.ly/4pcej3D</code>.
+      Una vez añadida, verás todos los canales ordenados por temáticas. Tan solo selecciona el canal que
+      quieras ver y se abrirá Ace Stream automáticamente para reproducir el enlace.
+       <br />
       <a
         href="https://mega.nz/folder/AddSwK6J#E5L5EeZqvazk2eJLbtFzZg"
         target="_blank"
